# bird_tool_utils-python

./: .travis.yml  README.md  bird_tool_utils-python.yml  pixi.toml  pyproject.toml  release.py  setup.py
.github/workflows/: publish-to-pypi.yml  test.yml
admin/: release.py
bird_tool_utils/: __init__.py  argparsing.py  people.py  version.py
cloudbuild/: cloudbuild.yaml  release_pypi.sh  run_tests.yaml
test/: conftest.py  test_argparse.py  test_little_bits.py  test_sequence.py
